# Country-AI-Agent

./: .gitignore  README.md  first_file.py  pyproject.toml
app/: main.py
app/agent/: graph.py  nodes.py  state.py  tools.py
app/api/: routes.py
app/core/: config.py  logging.py
app/models/: schemas.py
tests/: test_agent.py
